# scopehal-apps

glscopeclient/: HistoryWindow.cpp
tests/rigol_ds1104z/: CMakeLists.txt  main.cpp
